# drpd

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
config/: app.yaml
src/drpd/config/: __init__.py  config.py
src/drpd/core/: embeddings.py  llm_client.py
src/drpd/logging/: __init__.py  logger.py
src/drpd/utils/: count_token_llm.py
test/: test_embedding_service.py
